--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emailjs/browser": "^3.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1"
+    "react-hook-form": "^7.46.1",
+    "react-loader-spinner": "^5.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
